--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ a:visited {
   font-size: 1.7rem;
   font-weight: 600;
   grid-column: 1 / -1;
+  margin-right: 50px;
 }
 
 .workout__details {
@@ -217,4 +218,8 @@ a:visited {
 }
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
+}
+
+.btn__edit--workout {
+  margin-left: 30px;
 }
